[package]
name = "mcp230xx"
version = "0.2.0"
description = "MCP23008/MCP23017 8/16-Bit I2C I/O Expander with I2C Interface"
authors = ["Luca Zulian <lucagiuggia@gmail.com>", "Robert Jördens <rj@quartiq.de>", "Norman Krackow <nk@quartiq.de>", "Michael Kamprath <michael@kamprath.net>"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["hal", "IO", "mcp23017", "mcp23008", "I2C"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/quartiq/mcp230xx"
edition = "2021"
exclude = [
    "docs/",
    "docs/*",
]

[lib]
name = "mcp230xx"
test = false
bench = false

[features]
# Configure the library to use a reference counted I2C bus object rather than moving the I2C bus
# object into the MCP230xx struct. This allows the I2C bus to be shared between multiple clients. Using this
# feature does change the API slightly, as the I2C bus object must be passed wrapped in an `&Rc<RefCell<...>>` to the
# `new` function.
shared_i2c = []

[dependencies]
embedded-hal = "0.2.3"
bit_field = "0.10.1"
num_enum = { version = "0.7", default-features = false }
paste = "1.0.8"
